--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -12,29 +12,15 @@
 anonymous2024adversarial,
 title={Adversarial Imitation Learning via Boosting},
 author={Chang, Jonathan and Sreenivas, Dhruv and Huang, Yingbing and Brantley, Kianté and Sun, Wen},
-booktitle={The Twelfth International Conference on Learning Representations},
+booktitle={The Twelfth International Conference on Learning Representations (ICLR)},
 year={2024},
 url={https://openreview.net/forum?id=DuQkqSe9en}
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  selected={true}
+@article{placeholder,
+  title={Software/Hardware Co-design for LLM and Its Application for Design Verification},
+  author={Wan, Jiaxin and Huang, Yingbing and Li, Yuhong and Ye, Hanchen and Wang, Jinghua and Zhang, Xiaofan and Chen, Deming},
+  booktitle={The Asia and South Pacific Design Automation Conference (ASP-DAC)},
+  year={2024},
+  pdf={INVITEDPAPER_ASPDAC_24.pdf}
 }
