--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -6,6 +6,7 @@
   author={Chen, Yifang and Huang, Yingbing and Du, Simon S and Jamieson, Kevin and Shi, Guanya},
   journal={arXiv preprint arXiv:2306.08942},
   year={2023}
+  abbr={NeurIPS'23}
 }
 
 @inproceedings{
@@ -14,6 +15,7 @@ title={Adversarial Imitation Learning via Boosting},
 author={Chang, Jonathan and Sreenivas, Dhruv and Huang, Yingbing and Brantley, Kianté and Sun, Wen},
 booktitle={The Twelfth International Conference on Learning Representations (ICLR)},
 year={2024},
+abbr={ICLR'24},
 url={https://openreview.net/forum?id=DuQkqSe9en}
 }
 
@@ -22,5 +24,6 @@ url={https://openreview.net/forum?id=DuQkqSe9en}
   author={Wan, Jiaxin and Huang, Yingbing and Li, Yuhong and Ye, Hanchen and Wang, Jinghua and Zhang, Xiaofan and Chen, Deming},
   booktitle={The Asia and South Pacific Design Automation Conference (ASP-DAC)},
   year={2024},
+  abbr={ASP-DAC'24}
   pdf={INVITEDPAPER_ASPDAC_24.pdf}
 }
