--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,11 +1,12 @@
 ---
 ---
 
-@article{chen2023active,
+@inproceedings{chen2023active,
   title={Active Representation Learning for General Task Space with Applications in Robotics},
   author={Chen, Yifang and Huang, Yingbing and Du, Simon S and Jamieson, Kevin and Shi, Guanya},
-  journal={arXiv preprint arXiv:2306.08942},
-  year={2023}
+  booktitle={The Thirty-seventh Annual Conference on Neural Information Processing Systems (NeurIPS)},
+  arXiv={2306.08942},
+  year={2023},
   abbr={NeurIPS'23}
 }
 
@@ -19,11 +20,11 @@ abbr={ICLR'24},
 url={https://openreview.net/forum?id=DuQkqSe9en}
 }
 
-@article{placeholder,
+@inproceedings{placeholder,
   title={Software/Hardware Co-design for LLM and Its Application for Design Verification},
   author={Wan, Jiaxin and Huang, Yingbing and Li, Yuhong and Ye, Hanchen and Wang, Jinghua and Zhang, Xiaofan and Chen, Deming},
   booktitle={The Asia and South Pacific Design Automation Conference (ASP-DAC)},
   year={2024},
-  abbr={ASP-DAC'24}
+  abbr={ASP-DAC'24},
   pdf={INVITEDPAPER_ASPDAC_24.pdf}
 }
