--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -28,3 +28,23 @@ url={https://openreview.net/forum?id=DuQkqSe9en}
   abbr={ASP-DAC'24},
   pdf={INVITEDPAPER_ASPDAC_24.pdf}
 }
+
+@misc{li2024snapkvllmknowslooking,
+      title={SnapKV: LLM Knows What You are Looking for Before Generation}, 
+      author={Yuhong Li and Yingbing Huang and Bowen Yang and Bharat Venkitesh and Acyr Locatelli and Hanchen Ye and Tianle Cai and Patrick Lewis and Deming Chen},
+      year={2024},
+      eprint={2404.14469},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL},
+      url={https://arxiv.org/abs/2404.14469}, 
+}
+
+@misc{huang2024newsolutionsllmacceleration,
+      title={New Solutions on LLM Acceleration, Optimization, and Application}, 
+      author={Yingbing Huang and Lily Jiaxin Wan and Hanchen Ye and Manvi Jha and Jinghua Wang and Yuhong Li and Xiaofan Zhang and Deming Chen},
+      year={2024},
+      eprint={2406.10903},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG},
+      url={https://arxiv.org/abs/2406.10903}, 
+}
