--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -36,6 +36,7 @@ url={https://openreview.net/forum?id=DuQkqSe9en}
       eprint={2404.14469},
       archivePrefix={arXiv},
       primaryClass={cs.CL},
+      abbr={NeurIPS'24},
       url={https://arxiv.org/abs/2404.14469}, 
 }
 
@@ -46,5 +47,6 @@ url={https://openreview.net/forum?id=DuQkqSe9en}
       eprint={2406.10903},
       archivePrefix={arXiv},
       primaryClass={cs.LG},
+      abbr={DAC'24},
       url={https://arxiv.org/abs/2406.10903}, 
 }
