--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,32 +1,41 @@
 ---
 ---
 
-@inproceedings{chen2023active,
-  title={Active Representation Learning for General Task Space with Applications in Robotics},
-  author={Chen, Yifang and Huang, Yingbing and Du, Simon S and Jamieson, Kevin and Shi, Guanya},
-  booktitle={The Thirty-seventh Annual Conference on Neural Information Processing Systems (NeurIPS)},
-  arXiv={2306.08942},
-  year={2023},
-  abbr={NeurIPS'23}
+@misc{chen2023activerepresentationlearninggeneral,
+      title={Active Representation Learning for General Task Space with Applications in Robotics}, 
+      author={Yifang Chen and Yingbing Huang and Simon S. Du and Kevin Jamieson and Guanya Shi},
+      year={2023},
+      eprint={2306.08942},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG},
+      url={https://arxiv.org/abs/2306.08942}, 
+      abbr={NeurIPS'23}
 }
 
-@inproceedings{
-anonymous2024adversarial,
-title={Adversarial Imitation Learning via Boosting},
-author={Chang, Jonathan and Sreenivas, Dhruv and Huang, Yingbing and Brantley, Kianté and Sun, Wen},
-booktitle={The Twelfth International Conference on Learning Representations (ICLR)},
-year={2024},
-abbr={ICLR'24},
-url={https://openreview.net/forum?id=DuQkqSe9en}
+
+@misc{chang2024adversarialimitationlearningboosting,
+      title={Adversarial Imitation Learning via Boosting}, 
+      author={Jonathan D. Chang and Dhruv Sreenivas and Yingbing Huang and Kianté Brantley and Wen Sun},
+      year={2024},
+      eprint={2404.08513},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG},
+      url={https://arxiv.org/abs/2404.08513}, 
+      abbr={ICLR'24}
 }
 
-@inproceedings{placeholder,
-  title={Software/Hardware Co-design for LLM and Its Application for Design Verification},
-  author={Wan, Jiaxin and Huang, Yingbing and Li, Yuhong and Ye, Hanchen and Wang, Jinghua and Zhang, Xiaofan and Chen, Deming},
-  booktitle={The Asia and South Pacific Design Automation Conference (ASP-DAC)},
+
+@INPROCEEDINGS{10473893,
+  author={Wan, Lily Jiaxin and Huang, Yingbing and Li, Yuhong and Ye, Hanchen and Wang, Jinghua and Zhang, Xiaofan and Chen, Deming},
+  booktitle={2024 29th Asia and South Pacific Design Automation Conference (ASP-DAC)}, 
+  title={Invited Paper: Software/Hardware Co-design for LLM and Its Application for Design Verification}, 
   year={2024},
-  abbr={ASP-DAC'24},
-  pdf={INVITEDPAPER_ASPDAC_24.pdf}
+  volume={},
+  number={},
+  pages={435-441},
+  keywords={Training;Quantization (signal);Design automation;Source coding;Focusing;Hardware;Software;Large Language Models;software/hardware co-design;functional verification},
+  doi={10.1109/ASP-DAC58780.2024.10473893},
+  abbr={ASP-DAC'24}
 }
 
 @misc{li2024snapkvllmknowslooking,
