--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,28 @@
 ---
 ---
 
+@misc{li2024snapkvllmknowslooking,
+      title={SnapKV: LLM Knows What You are Looking for Before Generation}, 
+      author={Yuhong Li* and Yingbing Huang* and Bowen Yang and Bharat Venkitesh and Acyr Locatelli and Hanchen Ye and Tianle Cai and Patrick Lewis and Deming Chen},
+      year={2024},
+      eprint={2404.14469},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL},
+      abbr={NeurIPS'24},
+      url={https://arxiv.org/abs/2404.14469}, 
+}
+
+@misc{huang2024newsolutionsllmacceleration,
+      title={New Solutions on LLM Acceleration, Optimization, and Application}, 
+      author={Yingbing Huang and Lily Jiaxin Wan and Hanchen Ye and Manvi Jha and Jinghua Wang and Yuhong Li and Xiaofan Zhang and Deming Chen},
+      year={2024},
+      eprint={2406.10903},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG},
+      abbr={DAC'24},
+      url={https://arxiv.org/abs/2406.10903}, 
+}
+
 @misc{chen2023activerepresentationlearninggeneral,
       title={Active Representation Learning for General Task Space with Applications in Robotics}, 
       author={Yifang Chen and Yingbing Huang and Simon S. Du and Kevin Jamieson and Guanya Shi},
@@ -36,26 +58,4 @@
   keywords={Training;Quantization (signal);Design automation;Source coding;Focusing;Hardware;Software;Large Language Models;software/hardware co-design;functional verification},
   doi={10.1109/ASP-DAC58780.2024.10473893},
   abbr={ASP-DAC'24}
-}
-
-@misc{li2024snapkvllmknowslooking,
-      title={SnapKV: LLM Knows What You are Looking for Before Generation}, 
-      author={Yuhong Li and Yingbing Huang and Bowen Yang and Bharat Venkitesh and Acyr Locatelli and Hanchen Ye and Tianle Cai and Patrick Lewis and Deming Chen},
-      year={2024},
-      eprint={2404.14469},
-      archivePrefix={arXiv},
-      primaryClass={cs.CL},
-      abbr={NeurIPS'24},
-      url={https://arxiv.org/abs/2404.14469}, 
-}
-
-@misc{huang2024newsolutionsllmacceleration,
-      title={New Solutions on LLM Acceleration, Optimization, and Application}, 
-      author={Yingbing Huang and Lily Jiaxin Wan and Hanchen Ye and Manvi Jha and Jinghua Wang and Yuhong Li and Xiaofan Zhang and Deming Chen},
-      year={2024},
-      eprint={2406.10903},
-      archivePrefix={arXiv},
-      primaryClass={cs.LG},
-      abbr={DAC'24},
-      url={https://arxiv.org/abs/2406.10903}, 
 }
